--- a/QBU9QL_szerveroldali/appsettings.json
+++ b/QBU9QL_szerveroldali/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-QBU9QL_szerveroldali-33a91210-fcc2-48c9-95de-42736c100696;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-QBU9QL_szerveroldali-33a91210-fcc2-48c9-95de-42736c100696;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AzureConnection": "Server=tcp:oenikajf.database.windows.net,1433;Initial Catalog=accdetapp;Persist Security Info=False;User ID=adamecz.janos;Password=Patkany02;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
